WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282061
Text corruption may occur on safe.menlosecurity.com when writing suggestions are enabled
https://bugs.webkit.org/show_bug.cgi?id=282061
Summary
Text corruption may occur on safe.menlosecurity.com when writing suggestions ...
Lily Spiniolas
Reported
2024-10-24 14:01:42 PDT
Text corruption may occur on safe.menlosecurity.com when writing suggestions are enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2024-10-24 14:01:55 PDT
rdar://135114489
Lily Spiniolas
Comment 2
2024-10-24 14:06:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35690
EWS
Comment 3
2024-10-24 19:24:18 PDT
Committed
285682@main
(52fce3f7bd76): <
https://commits.webkit.org/285682@main
> Reviewed commits have been landed. Closing PR #35690 and removing active labels.
EWS
Comment 4
2024-10-28 19:33:06 PDT
Committed
283286.364@safari-7620-branch
(e837a564fa2b): <
https://commits.webkit.org/283286.364@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2137 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug