Text corruption may occur on safe.menlosecurity.com when writing suggestions are enabled https://bugs.webkit.org/show_bug.cgi?id=282061 rdar://135114489

Reviewed by Wenson Hsieh, Abrar Rahman Protyasha, and Richard Robinson.

Text corruption occurs in certain text fields on safe.menlosecurity.com when WebKit’s writing suggestions are enabled. Investigation into the site is difficult due to an account being required to use the service as well as eligibility requirements for making an account. In the mean time, the site should be quirked to trigger ’shouldDisableWritingSuggestionsByDefault’.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldDisableWritingSuggestionsByDefault const):

Canonical link: https://commits.webkit.org/285682@main